--- a/BOT/requirements.txt
+++ b/BOT/requirements.txt
@@ -1,8 +1,7 @@
-python-telegram-bot==20.7
-flask==2.3.3
+aiogram==3.17.0
+fastapi==0.104.1
+uvicorn==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.7
 python-dotenv==1.0.0
-requests==2.31.0
-pandas==2.0.3
-gunicorn==21.2.0
+aiohttp==3.9.1
