--- a/BOT/requirements.txt
+++ b/BOT/requirements.txt
@@ -1,8 +1,7 @@
-aiogram==3.17.0
-fastapi==0.104.1
-uvicorn==0.24.0
-aiohttp==3.9.1
-python-dotenv==1.0.0
-sqlalchemy==2.0.23
-alembic==1.12.1
-pydantic==2.5.0
+python-telegram-bot==20.*
+fastapi
+uvicorn
+sqlalchemy
+python-dotenv
+pydantic
+aiofiles
