--- a/BOT/requirements.txt
+++ b/BOT/requirements.txt
@@ -1,7 +1,9 @@
-python-telegram-bot==20.*
-fastapi
-uvicorn
-sqlalchemy
-python-dotenv
-pydantic
-aiofiles
+python-telegram-bot==20.7
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+sqlalchemy==2.0.23
+python-dotenv==1.0.0
+pydantic==2.5.0
+aiofiles==23.2.1
+psycopg2-binary==2.9.9
+alembic==1.12.1
