--- a/BOT/requirements.txt
+++ b/BOT/requirements.txt
@@ -1,9 +1,6 @@
-python-telegram-bot==20.7
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-python-dotenv==1.0.0
-pydantic==2.5.0
-aiofiles==23.2.1
-psycopg2-binary==2.9.9
-alembic==1.12.1
+python-telegram-bot[job-queue]>=20.0
+starlette~=0.20.0
+uvicorn~=0.23.2
+sqlalchemy
+python-dotenv
+httpx
