--- a/BOT/requirements.txt
+++ b/BOT/requirements.txt
@@ -1,6 +1,6 @@
-python-telegram-bot[job-queue]>=20.0
-starlette~=0.20.0
-uvicorn~=0.23.2
-sqlalchemy
-python-dotenv
-httpx
+python-telegram-bot==20.7
+starlette==0.27.0
+uvicorn==0.23.2
+sqlalchemy==2.0.23
+python-dotenv==1.0.0
+httpx==0.25.2
