--- a/BOT/requirements.txt
+++ b/BOT/requirements.txt
@@ -1,8 +1,5 @@
-python-telegram-bot==20.7
-starlette==0.27.0
-uvicorn==0.23.2
-sqlalchemy==2.0.23
-python-dotenv==1.0.0
-httpx==0.25.2
-python-telegram-bot[webhooks]==20.7
-python-dotenv==1.0.0
+python-telegram-bot==20.*
+fastapi
+uvicorn
+pydantic
+aiofiles
